Minor CSS fixes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="menu-item" id="menuBeef">
             <div class="menu-item-title">Beef</div>
             <div class="menu-item-text">
-                <p>Tempus imperdiet nulla malesuada pellentesque elit eget gravida. At quis risus sed vulputate odio ut enim. Nulla at volutpat diam ut venenatis. Neque convallis a cras semper auctor neque. Tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Vulputate eu scelerisque felis imperdiet proin. Nibh venenatis cras sed felis eget velit aliquet. Volutpat commodo sed egestas egestas. Curabitur gravida arcu ac tortor dignissim convallis aenean et tortor. Feugiat scelerisque varius morbi enim nunc faucibus. Vitae auctor eu augue ut lectus arcu bibendum at.</p>
+                <p>Tempus imperdiet nulla malesuada pellentesque elit eget gravida. At quis risus sed vulputate odio ut enim. Nulla at volutpat diam ut venenatis. Neque convallis a cras semper auctor neque. Tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Vulputate eu scelerisque felis imperdiet proin. Nibh venenatis cras sed felis eget velit aliquet. Volutpat commodo sed egestas egestas. Curabitur gravida arcu ac tortor dignissim convallis aenean et.</p>
             </div>
         </div>
         <div class="menu-item" id="menuSushi">
