--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vox Restaraunt Project</title>
+    <title>Vox Restaurant Project</title>
     <meta name="description" content="Fullstack course assignment">
     <meta name="author" content="vox">
     <link rel="stylesheet" type="text/css" href="project.css" />
